syntax = "proto3";

service RaftService {
  rpc HandleEvent (Event) returns (Empty) {}
  rpc HandleMessage (JsonMessage) returns (Empty) {}
}

message Empty {}
  
message Event {
  string type = 1;
  string json = 2;
  string sender_id = 3;
}

message JsonMessage {
  string json = 1;
  string senderId = 2;
}